--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,6 +1,6 @@
-<body>
+<body fxLayout="column">
   <app-nav-menu></app-nav-menu>
-  <div class="container">
+  <div fxFlex="1 1 100%">
     <router-outlet></router-outlet>
   </div>
 </body>
