--- a/ClientApp/src/app/components/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/components/nav-menu/nav-menu.component.html
@@ -10,9 +10,9 @@
           </button>
         </div>
 
-        <button mat-button [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }' [routerLink]='["/"]'>Home</button>
-        <button mat-button [routerLinkActive]='["link-active"]' [routerLink]='["/counter"]'>Counter</button>
-        <button mat-button [routerLinkActive]='["link-active"]' [routerLink]='["/fetch-data"]'>Fetch data</button>
+        <button mat-button [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }' [routerLink]='["/"]'>首页</button>
+        <button mat-button [routerLinkActive]='["link-active"]' [routerLink]='["/explore"]'>寻宝</button>
+        <button mat-button [routerLinkActive]='["link-active"]' [routerLink]='["/publish"]'>发布</button>
       </div>
       <!-- right content -->
       <div fxLayout="row">
@@ -20,6 +20,4 @@
       </div>
     </mat-toolbar-row>
   </mat-toolbar>
-  <nav fxLayout="row" fxLayoutAlign="space-between center">
-  </nav>
 </header>
