--- a/ClientApp/src/app/components/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/components/nav-menu/nav-menu.component.html
@@ -1,5 +1,5 @@
 <header>
-  <mat-toolbar color="primary">
+  <mat-toolbar color="primary" class="mat-elevation-z4">
     <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
       <!-- left content -->
       <div fxLayout="row" fxLayoutGap="1rem" fxLayoutAlign="start center">
