--- a/ClientApp/src/app/pages/files/files.component.html
+++ b/ClientApp/src/app/pages/files/files.component.html
@@ -3,6 +3,7 @@
     <tr>
       <td>Id</td>
       <td>File Name</td>
+      <td>Content Type</td>
       <td>Size</td>
       <td>Action</td>
     </tr>
@@ -11,7 +12,8 @@
     <tr *ngFor="let item of attachments">
       <td>{{item.id}}</td>
       <td>{{item.fileName}}</td>
-      <td>{{item.size}}</td>
+      <td>{{item.contentType}}</td>
+      <td>{{item.fileSize}}</td>
       <td>
         <a mat-button target="_blank" [href]="'/attachment/download/' + item.id"><mat-icon>open_in_new</mat-icon></a>
         <button mat-button (click)="delete(item)"><mat-icon>delete</mat-icon>Delete</button>
