--- a/ClientApp/src/app/pages/home/home.component.html
+++ b/ClientApp/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container" fxLayout="column" fxLayoutAlign="space-around center">
+<div class="h100" fxLayout="column" fxLayoutAlign="space-around center">
   <h1>
     Hello World😊:)
   </h1>
