--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -2,3 +2,16 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.h100 {
+  height: 100%;
+}
+.w100 {
+  width: 100%;
+}
+.a-center{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%)
+}
