--- a/ClientApp/src/app/pages/publish/publish.component.html
+++ b/ClientApp/src/app/pages/publish/publish.component.html
@@ -4,22 +4,22 @@
     <mat-card-content fxLayout="column">
       <div fxLayout="row" fxLayoutGap="1rem">
         <mat-form-field fxFlex="1 1 100%">
-          <input matInput placeholder="我要发布..." value="">
+          <input matInput placeholder="我要发布..." required ([ngModel])="title">
         </mat-form-field>
         <mat-form-field fxFlex="1 1 100%">
-          <input type="number" matInput placeholder="价格..." value="">
+          <input type="number" matInput placeholder="价格..." min="0.1" required ([ngModel])="price">
         </mat-form-field>
       </div>
       <div fxLayout="column" fxLayoutGap="1rem">
         <mat-form-field>
-          <textarea rows="6" matInput placeholder="描述..." value=""></textarea>
+          <textarea rows="6" matInput placeholder="描述..." ([ngModel])="description"></textarea>
         </mat-form-field>
-        <app-file-upload fxFlex="1 1 100%" matTooltip="上传图片"></app-file-upload>
+        <app-file-upload typeLimit="picture" fxFlex="1 1 100%" (fileChanged)="storeFiles($event)"></app-file-upload>
       </div>
     </mat-card-content>
     <mat-card-actions fxLayout="row" fxLayoutAlign="space-between start">
       <span></span>
-      <button mat-raised-button color="primary">提交</button>
+      <button mat-raised-button color="primary" (click)="submit()">提交</button>
     </mat-card-actions>
   </mat-card>
 </div>
