fix yelucassso issue

--- a/ClientApp/src/app/pages/home/home.component.html
+++ b/ClientApp/src/app/pages/home/home.component.html
@@ -1,5 +1,7 @@
 <div class="h100" fxLayout="column" fxLayoutAlign="space-around center">
-  <h1>
-    Hello World😊:)
-  </h1>
+  <ul>
+    <li>
+      <a href="/identity/account/login">CAS Login</a>
+    </li>
+  </ul>
 </div>
