--- a/ClientApp/src/app/pages/explore/explore.component.html
+++ b/ClientApp/src/app/pages/explore/explore.component.html
@@ -1,3 +1,7 @@
 <p>
   explore works!
 </p>
+
+<button mat-fab color="primary" class="create-button" matTooltip="发布..." (click)="openPublish()">
+  <mat-icon>add</mat-icon>
+</button>
