road to loading.

--- a/ClientApp/src/app/components/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/components/nav-menu/nav-menu.component.html
@@ -5,7 +5,7 @@
       <div fxLayout="row" fxLayoutGap="1rem" fxLayoutAlign="start center">
         <button mat-button [routerLinkActive]='["link-active"]' [routerLink]='["/home"]'>BetterOwner</button>
         <button mat-button [routerLinkActive]='["link-active"]' [routerLink]='["/explore"]'>寻宝</button>
-        <button mat-button [routerLinkActive]='["link-active"]' [routerLink]='["/publish"]'>发布</button>
+        <button mat-button [routerLinkActive]='["link-active"]' [routerLink]='["/my"]'>我的</button>
       </div>
       <!-- right content -->
       <div fxLayout="row">
