road to explore....

--- a/ClientApp/src/app/components/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/components/nav-menu/nav-menu.component.html
@@ -4,8 +4,8 @@
       <!-- left content -->
       <div fxLayout="row" fxLayoutGap="1rem" fxLayoutAlign="start center">
         <button mat-button [routerLinkActive]='["link-active"]' [routerLink]='["/home"]'>BetterOwner</button>
-        <button mat-button [routerLinkActive]='["link-active"]' [routerLink]='["/explore"]'>寻宝</button>
-        <button mat-button [routerLinkActive]='["link-active"]' [routerLink]='["/my"]'>我的</button>
+        <button mat-button [routerLinkActive]='["link-active"]' [routerLink]='["/explore"]'>Search</button>
+        <button mat-button [routerLinkActive]='["link-active"]' [routerLink]='["/my"]'>My</button>
       </div>
       <!-- right content -->
       <div fxLayout="row">
