--- a/ClientApp/src/app/pages/explore/explore.component.html
+++ b/ClientApp/src/app/pages/explore/explore.component.html
@@ -1,12 +1,7 @@
-<table>
-  <tr *ngFor="let item of treasures">
-    <td>{{item.id}}</td>
-    <td>{{item.title}}</td>
-    <td>{{item.price}}</td>
-    <td>{{item.publishUser}}</td>
-    <td>{{item.pictureUrl}}</td>
-  </tr>
-</table>
+<div gdAuto>
+  <app-explore-item *ngFor="let item of treasures" [data]="item"></app-explore-item>
+</div>
+
 
 <button mat-fab color="primary" class="create-button" matTooltip="发布..." (click)="openPublish()">
   <mat-icon>add</mat-icon>
